Add Vietnamese to staff UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item>Đang giao</item>
         <item>Đã giao</item>
     </string-array>
+    <string name="product_image">Product Image</string>
 
 </resources>
 
